Adding functionality to buttons and refactoring code

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,8 +66,12 @@ body {
 	border-radius: 5px;
 	display: flex;
 	justify-content: space-between;
-	align-items: baseline;
+	align-items: center;
 	padding: 43px 45px 44px 45px;
+}
+
+.task__info {
+	max-width: 450px;
 }
 
 .task__controls {
@@ -85,6 +89,24 @@ body {
 	cursor: pointer;
 }
 
+.task__btn_edit {
+	background-image: url(../images/edit-icon.svg);
+	width: 24px;
+	height: 23px;
+}
+
+.task__btn_copy {
+	background-image: url(../images/duplicate-icon.svg);
+	width: 25px;
+	height: 25px;
+}
+
+.task__btn_delete {
+	background-image: url(../images/delete-icon.svg);
+	width: 18px;
+	height: 17px;
+}
+
 .task__name {
 	margin: 0;
 	font-weight: 900;
@@ -92,6 +114,11 @@ body {
 	line-height: 29px;
 }
 
+.task__name_editable {
+	width: 450px;
+	background-color: #fff;
+	color: #000;
+}
 
 /* .input */
 .input {
