Add float form styles and change todo styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,13 +63,18 @@ img {
 	padding: 21px;
 }
 
+.todo__button {
+	padding: 21px;
+	font-size: 24px;
+}
+
 /* .task */
 .task {
 	border: 1px solid #6F6F6F;
 	border-radius: 5px;
 	display: flex;
 	justify-content: space-between;
-	padding: 43px 45px 44px 45px;
+	padding: 43px 45px 44px 35px;
 }
 
 .task__controls {
@@ -91,6 +96,11 @@ img {
 	background-image: url("../images/edit-icon.svg");
 	width: 23px;
 	height: 23px;
+	opacity: 0;
+}
+
+.task__btn_edit_active {
+	opacity: 1;
 }
 
 .task__btn_copy {
@@ -106,7 +116,7 @@ img {
 }
 
 .task__name {
-	margin: 0;
+	margin: 0 10px;
 	font-weight: 900;
 	font-size: 24px;
 	line-height: 29px;
@@ -129,11 +139,25 @@ img {
 /* .button */
 .button {
 	font-weight: 900;
-	font-size: 24px;
 	line-height: 29px;
 	color: #000000;
 	background: #FFFFFF;
 	border-radius: 5px;
-	padding: 21px;
 	border: none;
+}
+
+/* .float__input */
+.float__input {
+	width: 80%;
+	padding-left: 10px;
+}
+
+.float__form {
+	display: flex;
+	max-width: 100%;
+}
+
+.float__button {
+	width: 20%;
+	font-size: 18px;
 }
