Inermediate commit Day 3 todolist finetune

--- a/css/styles.css
+++ b/css/styles.css
@@ -182,3 +182,13 @@ body {
     border-color: #7fff00;
     box-shadow: 0px 0px 11px 0px #7FFF00;
 }
+
+.editable-element-highlighting {
+    border-color: #FAE800;
+    /* box-shadow: 0px 0px 11px 0px #FAE800; */
+}
+
+.editable-element-highlighting:hover {
+    border-color: #FAE800;
+    box-shadow: 0px 0px 11px 0px #FAE800;
+}
