--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,11 @@ body {
 	border: none;
 }
 
+.input-task-edit {
+	margin-top: -40px;
+	margin-bottom: -40px;
+}
+
 /* .button */
 .button {
 	font-weight: 900;
@@ -115,4 +120,8 @@ body {
 	border-radius: 5px;
 	padding: 21px;
 	border: none;
+}
+
+.task_hide {
+	display: none;
 }
